Promote y demote; pero no "desdemote"
